syntax = "proto3";

package jsgenerate_xray_webui.settings;
option go_package = "github.com/zuiwuchang/xray_webui/protocol/settings";

import "google/api/annotations.proto";

service Settings {
    // 返回 常規設定
    rpc GetGeneral (GetGeneralRequest) returns (General){
        option (google.api.http) = {
            get: "/api/v1/settings/general"
        };
    }
    // 更新 常規設定
    rpc SetGeneral (General) returns (SetGeneralResponse){
        option (google.api.http) = {
            post: "/api/v1/settings/general"
            body: "*"
        };
    }
    // 列舉全部訂閱信息
    rpc ListSubscription (ListSubscriptionRequest) returns (ListSubscriptionResponse){
        option (google.api.http) = {
            get: "/api/v1/settings/subscription"
        };
    }
    // 返回指定的訂閱信息
    rpc GetSubscription (GetSubscriptionRequest) returns (Subscription){
        option (google.api.http) = {
            get: "/api/v1/settings/subscription/{id}"
        };
    }
    // 修改訂閱信息
    rpc PutSubscription (Subscription) returns (PutSubscriptionResponse){
        option (google.api.http) = {
            put: "/api/v1/settings/subscription/{id}"
            body: "*"
        };
    }
    // 新增訂閱
    rpc AddSubscription (AddSubscriptionRequest) returns (AddSubscriptionResponse){
        option (google.api.http) = {
            post: "/api/v1/settings/subscription"
            body: "*"
        };
    }
    // 刪除訂閱
    rpc RemoveSubscription (RemoveSubscriptionRequest) returns (RemoveSubscriptionResponse){
        option (google.api.http) = {
            delete: "/api/v1/settings/subscription/{id}"
        };
    }

    // 返回訂閱節點
    rpc ListElement (ListElementRequest) returns (ListElementResponse){
        option (google.api.http) = {
            get: "/api/v1/settings/element"
        };
    }

    // 更新訂閱的節點
    rpc UpdateElement (UpdateElementRequest) returns (UpdateElementResponse){
        option (google.api.http) = {
            post: "/api/v1/settings/element/{id}"
        };
    }
    // 返回節點元信息
    rpc Metadata (MetadataRequest) returns (MetadataResponse){
        option (google.api.http) = {
            post: "/api/v1/settings/metadata"
        };
    }
}
message General{
	// 測試速度請求的 url
	string url = 1;
	// 啓動時自動運行 代理服務
	bool run = 2;
	// 因爲 Run 而自動啓動服務後 設置服務器規則
	bool firewall = 3;
	// 使用的策略，默認爲 1
	uint32 strategy = 4;
	// 自定義設定， jsonnet 字符串
	string userdata = 5;
}
message GetGeneralRequest{}
message SetGeneralResponse{}
message Subscription{
    // 唯一識別碼
	uint64 id = 1;
	// 給人類看的名稱
	string name = 2;
	// 訂閱地址
	string url = 3;
}
message ListSubscriptionRequest{}
message ListSubscriptionResponse{
    repeated Subscription data = 1;
}
message GetSubscriptionRequest{
    // 唯一識別碼
	uint64 id = 1;
}
message PutSubscriptionResponse{}
message AddSubscriptionRequest{
	// 給人類看的名稱
	string name = 2;
	// 訂閱地址
	string url = 3;
}
message AddSubscriptionResponse{
    // 唯一識別碼
	uint64 id = 1;
}
message RemoveSubscriptionRequest{
    // 唯一識別碼
	uint64 id = 1;
}
message RemoveSubscriptionResponse{
}

// 訂閱節點
message Element{
    // 唯一識別碼
	uint64 id = 1;
	// 節點信息
	string url = 3;
}
message Group{
    // 所屬訂閱組
	uint64 id = 1;
	// 訂閱名稱
	string name = 2;
	// 訂閱地址
	string url = 3;

    // 代理節點
    repeated Element data = 4;
}
message ListElementRequest{}
message ListElementResponse{
    repeated Group data = 1;
}
message UpdateElementRequest{
    uint64 id = 1;
}
message UpdateElementResponse{
    repeated Element data = 4;
}
message Metadata{}
message MetadataRequest{}
message MetadataResponse{
    repeated Metadata data = 1;
}